--- a/main.tex
+++ b/main.tex
@@ -93,12 +93,13 @@ style=ieee,
 }
 
 
-\newcommand{\resumeEducationHeading}[6]{
+\newcommand{\resumeEducationHeading}[8]{
   \vspace{-2pt}\item
     \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
       \textbf{#1} & #2 \\
       \textit{\small#3} & \textit{\small #4} \\
       \textit{\small#5} & \textit{\small #6} \\
+      \textit{\small#7} & \textit{\small #8} \\
     \end{tabular*}\vspace{-5pt}
 }
 
@@ -145,7 +146,7 @@ style=ieee,
     \faAt \hspace{.5pt}
     \href{mailto:v.madabushi917@gmail.com}{v.madabushi917@gmail.com}
     $|$
-    \faMapMarker \hspace{.5pt} {Columbia, MD, USA}
+    \faMapMarker \hspace{.5pt} {Atlanta, GA, USA}
 \end{center}
 
 
@@ -157,54 +158,62 @@ style=ieee,
   \resumeSubHeadingListStart
     
     \resumeEducationHeading
-      {Georgia Institute of Technology
-      % \normalfont{(Admission rate: 0.09\%)}
-      }{Atlanta, GA}
+      {Georgia Institute of Technology}{Atlanta, GA}
       {B.S. in Electrical Engineering, Minor in Robotics;   \textbf{GPA: 3.93/4.00}}{Aug 2017 \textbf{--} Dec 2020}
-      {M.S. in Electrical and Computer Engineering;  
-      \textbf{GPA: 4.00/4.00}}{Jan 2021 \textbf{--} May 2022}
+      {M.S. in Electrical and Computer Engineering;         \textbf{GPA: 4.00/4.00}}{Jan 2021 \textbf{--} May 2022}
+      {PhD. in Robotics;                                    \textbf{GPA: 4.00/4.00}}{Aug 2024 \textbf{--} May 2028 (Expected)}
   \resumeSubHeadingListEnd
-  \resumeSubHeadingListStart
-    \small{\item{
-  \textbf{Relevant coursework: }{Linear Control, Nonlinear Systems, Adaptive
-  Control, Dynamics and Control of Electric Machines, Robotics, Machine Learning, Analog Electronics} \\
-  \vspace{3pt}
-        
-    }}
-\resumeSubHeadingListEnd
 
 
 
 %----------- WORK EXPERIENCE -----------
 
-\section{Work Experience}
+\section{Experience}
   \vspace{3pt}
   \resumeSubHeadingListStart
 
     \resumeSubheading
+      {Dynamic Mobility Lab}{Atlanta, GA}
+      {Graduate Researcher}{Aug 2024 \textbf{--} Present}
+      \resumeItemListStart
+        \resumeItem{Developed bipedal robot control system utilizing offline trajectory optimization and reinforcement learning to generate stepping behaviors that are 
+        natural-looking, easily tunable, and train faster than comparable approaches}
+        \resumeItem{Researching integration of reachability analysis tools into trajectory optimization pipeline to produce inherently robust and safe controllers for bipedal robots}
+      \resumeItemListEnd
+    \resumeSubheading
       {Johns Hopkins University Applied Physics Laboratory}{Laurel, MD}
-      {Robotics Engineer}{Jun 2022 \textbf{--} Present}
+      {Robotics Engineer}{Jun 2022 \textbf{--} Jul 2024}
         \resumeItemListStart
-      \resumeItem{Developed co-design algorithm using bayesian optimization to
-      select leg designs and gait patterns for hexapod robot}
-      \resumeItem{Developed fixed-wing aircraft and propeller models in C++ for use in
-      Nonlinear Model Predictive Controller}
-      \resumeItem{Implemented scripted task behaviors and "glue logic" for demonstrations
-      of underwater manipulator robot}
-      \resumeItem{Designed 2-axis sensor positioning mechanism for littoral zone
-      exploration robot}
-      \resumeItem{Developed power and control electronics for thermal cautery heater used in
-      experimental emergency medical device}
+      \resumeItem{Led statistical verification and operational analysis, and assisted in development of Nonlinear Model Predictive Control (NMPC) algorithm for
+      multi-agent fixed-wing Unmanned Aerial Vehicle systems}
+      \resumeItem{Provided hardware and software support for numerous outdoor flight tests of NMPC-based UAV landing controller}
+      \resumeItem{Implemented trajectory optimization to realize manipulation behaviors such grasping and valve turning on
+      unmanned underwater mobile manipulator (awarded top prize in internal R\&D across all of the company)}
+      \resumeItem{Co-led short-term research on robot co-design, which leveraged bayesian optimization to automatically choose 
+      task-optimal hardware and control parameters for hexapod robot system}
+      % \resumeItem{Implemented scripted task behaviors and "glue logic" for demonstrations
+      % of underwater manipulator robot}
+      % \resumeItem{Designed 2-axis sensor positioning mechanism for littoral zone
+      % exploration robot}
+      % \resumeItem{Developed power and control electronics for thermal cautery heater used in
+      % experimental emergency medical device}
       \resumeItem{Mentored high school interns on mechanical and software design
       of robotic manipulator}
-        \resumeItemListEnd
+    \resumeItemListEnd
     
+    \resumeSubheading
+      {Intelligent Vision and Automation Lab}{Atlanta, GA}
+      {Graduate Researcher}{Jan 2022 \textbf{--} Aug 2022}
+        \resumeItemListStart
+          \resumeItem{Combined model predictive and reinforcement learning-based elements in heirarchial aircraft controller to improve generalization to various aircraft types}
+          \resumeItem{Developed trajectory library in MATLAB utilizing convex optimization to generate composite bezier spline paths}
+    \resumeItemListEnd
     \resumeSubheading
       {Lawrence Livermore National Laboratory}{Livermore, CA}
       {Defense Technologies Engineering Intern}{May 2020 \textbf{--} Aug 2020,
       Sep 2021 \textbf{--} Apr 2022}
         \resumeItemListStart
-      \resumeItem{Designed simulator and hardware-in-the-loop testing framework
+      \resumeItem{Designed simulator and hardware-in-the-loop testing
       for Unmanned Surface Vehicle (USV) control system}
       \resumeItem{Developed actuator and hydrodynamic drag models fit from experimental
        data, used to inform new USV design}
@@ -213,115 +222,18 @@ style=ieee,
         \resumeItemListEnd
     
   \resumeSubHeadingListEnd
-
-
-
-%----------- RESEARCH EXPERIENCE -----------
-
-\section{Research Experience}
-  \vspace{3pt}
-  \resumeSubHeadingListStart
-  
-    \resumeSubheading
-      {Intelligent Vision and Automation Lab}{Georgia Tech}
-      {Graduate Researcher}{Jan 2022 \textbf{--} Aug 2022}
-        \resumeItemListStart
-          \resumeItem{Combined model predictive and reinforcement learning-based aircraft controllers to improve generalization to various aircraft types}
-        \resumeItem{Developed trajectory library in MATLAB utilizing convex
-          optimization to generate composite bezier spline paths}
-        \resumeItemListEnd
-    
-    % \vspace{14pt}
-    
-    \resumeSubheading
-      {Dynamic Adaptive Robot Technologies Lab}{Georgia Tech}
-      {Undergraduate Researcher}{Aug 2019 \textbf{--} Dec 2020}
-        \resumeItemListStart
-            \resumeItem{Designed components of hexapod robot with swappable locomotion mechanism for efficient multi-terrain traversal}
-            \resumeItem{Developed DC motor control PCB, communication interface, and feedback control software for leg actuator and control system}
-      \resumeItem{Published "Increasing Mobile Robot Efficiency and Versatility
-      Through Manipulation-Driven Adaptation" in ASME Journal of Mechanisms and
-      Robotics (Oct 2021)}
-        \resumeItemListEnd
-
-    \resumeSubheading
-      {Electrical Engineering Capstone}{Georgia Tech}
-      {Undergraduate Capstone Project}{Aug 2020 \textbf{--} Dec 2020}
-        \resumeItemListStart
-        \resumeItem{Designed tactile sensor module to measure pressures across 16 points on a 40mm x 40mm area }
-        \resumeItem{Created models of piezoresistive effect in velostat material
-        to improve accuracy of sensor measurements}
-        \resumeItem{Developed C++ and PyQT code to read data and manage sensors
-        with user interface}
-        \resumeItemListEnd
-  \resumeSubHeadingListEnd
-
-\section{Publications}
-  \vspace{3pt}
-  \resumeSubHeadingListStart
-  \item \nocite{*} \printbibliography[heading=none]
-  \resumeSubHeadingListEnd
-
-
-\section{Personal Projects}
-  \vspace{3pt}
-  \resumeSubHeadingListStart
-    \resumeSubheading
-      {Combat Robots/"BattleBots"}{June 2021 \textbf{--} Present}
-      {}{}
-        \resumeItemListStart
-          \resumeItem{Designed and built 12lb and 3lb combat robots using horizontal spinning
-          weapons and novel control algorithm}
-    \resumeItem{Designed and tested custom printed circuit boards to house
-    sensors, communications, power management, and microcontroller in small package}
-    \resumeItem{Participated in multiple competitions and analyzed battle damage
-    for potential improvements}
-        \resumeItemListEnd
-  \resumeSubHeadingListEnd
-    
-
-%----------- TEACHING -----------
-\section{Teaching}
-  \vspace{3pt}
-  \resumeSubHeadingListStart
-    \resumeSubheading
-      {RoboJackets Electrical Training}{Georgia Tech}
-      {Electrial Training Lead}{Aug 2018 \textbf{--} Dec 2020}
-        \resumeItemListStart
-    \resumeItem{Wrote and delivered a 7 week training course teaching 60 incoming robotics
-    students about PCB design using EAGLE software}
-    \resumeItem{Implemented hands-on activities to introduce breadboarding and
-    electronics concepts}
-    \resumeItem{Created video tutorial series on EAGLE software for
-    virtual/asynchronous learning}
-        \resumeItemListEnd
-
-    \resumeSubheading
-      {The Hive - ECE Makerspace}{Georgia Tech}
-      {Peer Instructor}{May 2021 \textbf{--} Dec 2021}
-        \resumeItemListStart
-      \resumeItem{Gave advice and debugging assistance to students completing
-      school and personal projects}
-      \resumeItem{Led workshops to teach 30 students soldering, programming, and
-      3D printing to build their own keyboards}
-      \resumeItem{Performed inventory management and equiment maintenance for
-      electronics and 3D printing lab}
-        \resumeItemListEnd
-  \resumeSubHeadingListEnd
-
-%----------- SKILLS -----------
+% %----------- SKILLS -----------
 
 \section{Skills}
   \vspace{2pt}
   \resumeSubHeadingListStart
     \small{\item{
-        \textbf{Concepts:}{ Nonlinear Control, Model Predictive Control, System
-        Identification, Brushless Motor Control} \\ \vspace{3pt}
-        \textbf{Programming:}{ C++, Python, MATLAB, CUDA, ROS, Docker, STM32, Arduino } \\ \vspace{3pt}
+        \textbf{Concepts: }{Nonlinear Systems, Optimal Control, System Identification, Reinforcement Learning, Sim-to-Real Transfer} \\ \vspace{3pt}
+        \textbf{Programming: }{C++, Python, MATLAB, CUDA, ROS, Docker, STM32, Arduino } \\ \vspace{3pt}
         
-        \textbf{Software:}{ Solidworks, OnShape, Altium, KiCAD, Inventor, Eagle, Simulink, LTspice} \\ \vspace{3pt}
+        \textbf{Software: }{MuJoCo, Solidworks, OnShape, Altium, KiCAD} \\ \vspace{3pt}
         
-        \textbf{Tools:}{ Soldering (SMD and THT), Mill, Lathe, 3D Printer, Oscilloscope, Logic Analyzer}
+        \textbf{Tools: }{Soldering (SMD and THT), Mill, Lathe, 3D Printer, Oscilloscope, Logic Analyzer}
         
         % \textbf{Frameworks}{: X, X, X} \\
         % \textbf{Developer Tools}{: X, X, X} \\
@@ -331,102 +243,198 @@ style=ieee,
   \resumeSubHeadingListEnd
 
 
-
-%----------- RELEVANT COURSEWORK -----------
-
-% \section{Relevant Coursework}
-%   \vspace{2pt}
-
-% %----------- PROJECTS -----------
-
-% \section{Projects}
-%     \vspace{3pt}
-%     \resumeSubHeadingListStart
-      
-%       \resumeProjectHeading
-%         {\textbf{Filters and Fractals} $|$ \emph{\href{https://github.com/arasgungore/filters-and-fractals}{\color{blue}GitHub}}}{}
-%           \resumeItemListStart
-%             \resumeItem{A C project which implements a variety of image processing operations that manipulate the size, filter, brightness, contrast, saturation, and other properties of PPM images from scratch.}
-%             \resumeItem{Added recursive fractal generation functions to model popular fractals including Mandelbrot set, Julia set, Koch curve, Barnsley fern, and Sierpinski triangle in PPM format.}
-%           \resumeItemListEnd
-      
-%       \resumeProjectHeading
-%         {\textbf{Chess Bot} $|$ \emph{\href{https://github.com/arasgungore/chess-bot}{\color{blue}GitHub}}}{}
-%           \resumeItemListStart
-%             \resumeItem{A C++ project in which you can play chess against an AI with a specified decision tree depth that uses alpha-beta pruning algorithm to predict the optimal move.}
-%             \resumeItem{Aside from basic moves, this mini chess engine also implements chess rules such as castling, en passant, fifty-move rule, threefold repetition, and pawn promotion.}
-%           \resumeItemListEnd
-      
-%       % \resumeProjectHeading
-%         % {\textbf{Rocket Flight Simulator} $|$ \emph{\href{https://github.com/arasgungore/rocket-flight-simulator}{\color{blue}GitHub}}}{}
-%           % \resumeItemListStart
-%             % \resumeItem{A Simulink project which can accurately simulate the motion of a flying rocket in one-dimensional space.}
-%             % \resumeItem{The project implements the forces acting on a rocket which are drag, weight, and thrust as subsystems that take time-variant parameters into consideration such as distance from the center of Earth, mass and velocity of the rocket, and air density at different layers of Earth's atmosphere.}
-%           % \resumeItemListEnd
-      
-%       % \resumeProjectHeading
-%         % {\textbf{Netlist Solver} $|$ \emph{\href{https://github.com/arasgungore/netlist-solver}{\color{blue}GitHub}}}{}
-%           % \resumeItemListStart
-%             % \resumeItem{A MATLAB project that uses modified nodal analysis (MNA) algorithm to calculate the node voltages of any analog circuit without dependent sources given in netlist format.}
-%             % \resumeItem{Added a module that sweeps the resistance of a load resistor, plots power dissipation as a function of load resistance, and finds the resistance value corresponding to maximum power.}
-%           % \resumeItemListEnd
-      
-%       \resumeProjectHeading
-%         {\textbf{CMPE 250 Projects} $|$ \emph{\href{https://github.com/arasgungore/CMPE250-projects}{\color{blue}GitHub}}}{}
-%           \resumeItemListStart
-%             \resumeItem{Five Java projects assigned for the Data Structures and Algorithms (CMPE 250) course in the Fall 2021-22 semester.}
-%             \resumeItem{These projects apply DS\&A concepts such as discrete-event simulation (DES) using priority queues, Dijkstra's shortest path algorithm, Prim's algorithm to find the minimum spanning tree (MST), Dinic's algorithm for maximum flow problems, and weighted job scheduling with dynamic programming to real-world problems.}
-%           \resumeItemListEnd
-      
-%     \resumeSubHeadingListEnd
+\section{Publications}
+  \vspace{3pt}
+  \nocite{*}
+  \printbibliography[heading=none]
 
 
+%----------- RESEARCH EXPERIENCE -----------
 
-
-
-
-
-
-
-%----------- CERTIFICATES -----------
-
-% \section{Certificates}
-  % \resumeSubHeadingListStart
+% \section{Research Experience}
+%   \vspace{3pt}
+%   \resumeSubHeadingListStart
+  
+%     \resumeSubheading
+%       {Intelligent Vision and Automation Lab}{Georgia Tech}
+%       {Graduate Researcher}{Jan 2022 \textbf{--} Aug 2022}
+%         \resumeItemListStart
+%           \resumeItem{Combined model predictive and reinforcement learning-based aircraft controllers to improve generalization to various aircraft types}
+%         \resumeItem{Developed trajectory library in MATLAB utilizing convex
+%           optimization to generate composite bezier spline paths}
+%         \resumeItemListEnd
     
-    % \resumeOrganizationHeading
-      % {Procter \& Gamble VIA Certificate Program}{Feb 2022}{Business Skills, Data and Digital Skills, Project Management and Personal Productivity}
+%     % \vspace{14pt}
     
-  % \resumeSubHeadingListEnd
+%     \resumeSubheading
+%       {Dynamic Adaptive Robot Technologies Lab}{Georgia Tech}
+%       {Undergraduate Researcher}{Aug 2019 \textbf{--} Dec 2020}
+%         \resumeItemListStart
+%             \resumeItem{Designed components of hexapod robot with swappable locomotion mechanism for efficient multi-terrain traversal}
+%             \resumeItem{Developed DC motor control PCB, communication interface, and feedback control software for leg actuator and control system}
+%       \resumeItem{Published "Increasing Mobile Robot Efficiency and Versatility
+%       Through Manipulation-Driven Adaptation" in ASME Journal of Mechanisms and
+%       Robotics (Oct 2021)}
+%         \resumeItemListEnd
+
+%     \resumeSubheading
+%       {Electrical Engineering Capstone}{Georgia Tech}
+%       {Undergraduate Capstone Project}{Aug 2020 \textbf{--} Dec 2020}
+%         \resumeItemListStart
+%         \resumeItem{Designed tactile sensor module to measure pressures across 16 points on a 40mm x 40mm area }
+%         \resumeItem{Created models of piezoresistive effect in velostat material
+%         to improve accuracy of sensor measurements}
+%         \resumeItem{Developed C++ and PyQT code to read data and manage sensors
+%         with user interface}
+%         \resumeItemListEnd
+%   \resumeSubHeadingListEnd
 
 
 
-%----------- ORGANIZATIONS -----------
-
-% \section{Organizations}
-  % \resumeSubHeadingListStart
+% \section{Personal Projects}
+%   \vspace{3pt}
+%   \resumeSubHeadingListStart
+%     \resumeSubheading
+%       {Combat Robots/"BattleBots"}{June 2021 \textbf{--} Present}
+%       {}{}
+%         \resumeItemListStart
+%           \resumeItem{Designed and built 12lb and 3lb combat robots using horizontal spinning
+%           weapons and novel control algorithm}
+%     \resumeItem{Designed and tested custom printed circuit boards to house
+%     sensors, communications, power management, and microcontroller in small package}
+%     \resumeItem{Participated in multiple competitions and analyzed battle damage
+%     for potential improvements}
+%         \resumeItemListEnd
+%   \resumeSubHeadingListEnd
     
-    % \resumeOrganizationHeading
-      % {Institute of Electrical and Electronics Engineers (IEEE)}{Feb 2022 -- Present}{Student Member}
+
+% %----------- TEACHING -----------
+% \section{Teaching}
+%   \vspace{3pt}
+%   \resumeSubHeadingListStart
+%     \resumeSubheading
+%       {RoboJackets Electrical Training}{Georgia Tech}
+%       {Electrial Training Lead}{Aug 2018 \textbf{--} Dec 2020}
+%         \resumeItemListStart
+%     \resumeItem{Wrote and delivered a 7 week training course teaching 60 incoming robotics
+%     students about PCB design using EAGLE software}
+%     \resumeItem{Implemented hands-on activities to introduce breadboarding and
+%     electronics concepts}
+%     \resumeItem{Created video tutorial series on EAGLE software for
+%     virtual/asynchronous learning}
+%         \resumeItemListEnd
+
+%     \resumeSubheading
+%       {The Hive - ECE Makerspace}{Georgia Tech}
+%       {Peer Instructor}{May 2021 \textbf{--} Dec 2021}
+%         \resumeItemListStart
+%       \resumeItem{Gave advice and debugging assistance to students completing
+%       school and personal projects}
+%       \resumeItem{Led workshops to teach 30 students soldering, programming, and
+%       3D printing to build their own keyboards}
+%       \resumeItem{Performed inventory management and equiment maintenance for
+%       electronics and 3D printing lab}
+%         \resumeItemListEnd
+%   \resumeSubHeadingListEnd
+
+
+
+
+% %----------- RELEVANT COURSEWORK -----------
+
+% % \section{Relevant Coursework}
+% %   \vspace{2pt}
+
+% % %----------- PROJECTS -----------
+
+% % \section{Projects}
+% %     \vspace{3pt}
+% %     \resumeSubHeadingListStart
+      
+% %       \resumeProjectHeading
+% %         {\textbf{Filters and Fractals} $|$ \emph{\href{https://github.com/arasgungore/filters-and-fractals}{\color{blue}GitHub}}}{}
+% %           \resumeItemListStart
+% %             \resumeItem{A C project which implements a variety of image processing operations that manipulate the size, filter, brightness, contrast, saturation, and other properties of PPM images from scratch.}
+% %             \resumeItem{Added recursive fractal generation functions to model popular fractals including Mandelbrot set, Julia set, Koch curve, Barnsley fern, and Sierpinski triangle in PPM format.}
+% %           \resumeItemListEnd
+      
+% %       \resumeProjectHeading
+% %         {\textbf{Chess Bot} $|$ \emph{\href{https://github.com/arasgungore/chess-bot}{\color{blue}GitHub}}}{}
+% %           \resumeItemListStart
+% %             \resumeItem{A C++ project in which you can play chess against an AI with a specified decision tree depth that uses alpha-beta pruning algorithm to predict the optimal move.}
+% %             \resumeItem{Aside from basic moves, this mini chess engine also implements chess rules such as castling, en passant, fifty-move rule, threefold repetition, and pawn promotion.}
+% %           \resumeItemListEnd
+      
+% %       % \resumeProjectHeading
+% %         % {\textbf{Rocket Flight Simulator} $|$ \emph{\href{https://github.com/arasgungore/rocket-flight-simulator}{\color{blue}GitHub}}}{}
+% %           % \resumeItemListStart
+% %             % \resumeItem{A Simulink project which can accurately simulate the motion of a flying rocket in one-dimensional space.}
+% %             % \resumeItem{The project implements the forces acting on a rocket which are drag, weight, and thrust as subsystems that take time-variant parameters into consideration such as distance from the center of Earth, mass and velocity of the rocket, and air density at different layers of Earth's atmosphere.}
+% %           % \resumeItemListEnd
+      
+% %       % \resumeProjectHeading
+% %         % {\textbf{Netlist Solver} $|$ \emph{\href{https://github.com/arasgungore/netlist-solver}{\color{blue}GitHub}}}{}
+% %           % \resumeItemListStart
+% %             % \resumeItem{A MATLAB project that uses modified nodal analysis (MNA) algorithm to calculate the node voltages of any analog circuit without dependent sources given in netlist format.}
+% %             % \resumeItem{Added a module that sweeps the resistance of a load resistor, plots power dissipation as a function of load resistance, and finds the resistance value corresponding to maximum power.}
+% %           % \resumeItemListEnd
+      
+% %       \resumeProjectHeading
+% %         {\textbf{CMPE 250 Projects} $|$ \emph{\href{https://github.com/arasgungore/CMPE250-projects}{\color{blue}GitHub}}}{}
+% %           \resumeItemListStart
+% %             \resumeItem{Five Java projects assigned for the Data Structures and Algorithms (CMPE 250) course in the Fall 2021-22 semester.}
+% %             \resumeItem{These projects apply DS\&A concepts such as discrete-event simulation (DES) using priority queues, Dijkstra's shortest path algorithm, Prim's algorithm to find the minimum spanning tree (MST), Dinic's algorithm for maximum flow problems, and weighted job scheduling with dynamic programming to real-world problems.}
+% %           \resumeItemListEnd
+      
+% %     \resumeSubHeadingListEnd
+
+
+
+
+
+
+
+
+
+% %----------- CERTIFICATES -----------
+
+% % \section{Certificates}
+%   % \resumeSubHeadingListStart
     
-  % \resumeSubHeadingListEnd
-
-
-
-%----------- HOBBIES -----------
-
-% \section{Hobbies}
-  % \resumeSubHeadingListStart
-    % \small{\item{Swimming, Fitness, Eight-ball}}
-  % \resumeSubHeadingListEnd
-
-
-
-%----------- REFERENCES -----------
-
-% \section{References}
-  % \resumeSubHeadingListStart
+%     % \resumeOrganizationHeading
+%       % {Procter \& Gamble VIA Certificate Program}{Feb 2022}{Business Skills, Data and Digital Skills, Project Management and Personal Productivity}
     
-  % \resumeSubHeadingListEnd
+%   % \resumeSubHeadingListEnd
+
+
+
+% %----------- ORGANIZATIONS -----------
+
+% % \section{Organizations}
+%   % \resumeSubHeadingListStart
+    
+%     % \resumeOrganizationHeading
+%       % {Institute of Electrical and Electronics Engineers (IEEE)}{Feb 2022 -- Present}{Student Member}
+    
+%   % \resumeSubHeadingListEnd
+
+
+
+% %----------- HOBBIES -----------
+
+% % \section{Hobbies}
+%   % \resumeSubHeadingListStart
+%     % \small{\item{Swimming, Fitness, Eight-ball}}
+%   % \resumeSubHeadingListEnd
+
+
+
+% %----------- REFERENCES -----------
+
+% % \section{References}
+%   % \resumeSubHeadingListStart
+    
+%   % \resumeSubHeadingListEnd
 
 
 
